grid: fix sizing of #gridContainer on Safari WIP
TODO: test in Firefox

Handling of CSS "aspect-ratio" on Safari seems broken.  Add two
workarounds -- for portrait and landscape.

--- a/grid.css
+++ b/grid.css
@@ -21,11 +21,15 @@ body {
 @media screen and (orientation:landscape) {
 	#gridContainer {
 		height: 90%;
+		/* workaround for bug in Safari */
+		min-width: 85vh;
 	}
 }
 @media screen and (orientation:portrait) {
 	#gridContainer {
 		width: 90%;
+		/* workaround for bug in Safari */
+		aspect-ratio: unset !important;
 	}
 }
 
